# Ombresurge-GameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
cmake/: Dependencies.cmake
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
renderer-ogl/: CMakeLists.txt
renderer-ogl/include/: Renderer.h  SceneSetup.h  Shader.h  Tri.h
renderer-ogl/source/: Renderer.cpp  SceneSetup.cpp  Shader.cpp
shaders/: quad.frag  quad.vert  tri.frag  tri.vert
